package userInterfaces;

import entity.book.Book;

public interface Bookable {

    Book rentBook(Book book);
}
