@startuml
'https://plantuml.com/class-diagram

class Book <<Entity>> {
-id: String
-title: String
-author: String
-price: Double
-status: Status
-edition: Integer
-bookType: BookType
}

class User <<Entity>> {
-id: String
-firstName: String
-lastName: String
-age: Integer
-role: Role
-address: Address
}

class Client <<Entity>> {
-books: List<Book>
-wallet: Double

returnBook()
findAllBooks()
sortBooksByPrice()
sortBooksByPriceDesc()
sortBooksByTitle()
searchBookByTitle()
searchBooksByCategory()
}

interface Bookable {
rentBook()
}

class Librarian <<Entity>> {
-library: Library
-borrowList: Map<String, BorrowDetail>

addBook()
invoice()
removeBookById()
displayBookList()
displayBorrowList()
takeBackBook()
}

class Library <<Entity>> {
-bookList: Map<String, Book>
-address: Address
-register: Double
}

class Address <<Value Object>> {
-street: String
-district: String
-postalCode: Integer
}

enum Status <<Value Object>> {
AVAILABLE
UNAVAILABLE
}

enum Role <<Value Object>> {
CLIENT
LIBRARIAN
}

enum BookType <<Value Object>> {
NOVEL
JOURNAL
STUDY_BOOK
MAGAZINE
}

stereotype BorrowDetail <<Record>> {
-clientName: String
-bookId: String
-daysRentedFor: Integer
-cost: Double
-timestamp: Long
}

Book *--left> Status
User *--left> Role
User *--> Address
Librarian *--> Library
Library *--up> Address
Book *--right> BookType

Client --up|> User
Librarian --up|> User
Client ..> Bookable

/'interface ClientService {
returnBook()
findAllBooks()
sortBooksByPrice()
sortBooksByPriceDesc()
sortBooksByTitle()
searchBookByTitle()
searchBooksByCategory()
}

interface LibrarianService {
addBook()
invoice()
removeBookById()
displayBookList()
displayBorrowList()
takeBackBook()
}

class ClientServiceImpl {
}

class LibrarianServiceImpl {
}

ClientServiceImpl ..> ClientService
ClientServiceImpl *--up> Client
ClientServiceImpl *--> LibrarianServiceImpl
LibrarianServiceImpl ..> LibrarianService
LibrarianServiceImpl *--left> Librarian'/

@enduml